Changes in QMPlay2 build 15.12.25:
	- KF5 Breeze style fixes in full screen,
	- Qt5 <= 5.2 compilation fixes,
	- OpenGL 2 bugfix,

Changes in QMPlay2 build 15.12.06:
	- support for HEVC, VP8 and VP9 decoding in VA-API (depending on FFmpeg version),
	- setting priorities of decoders and A/V outputs is now more convenient,
	- improve QOpenGLWidget performance (Qt5 only, not used by default),
	- support for HEVC decoding in VDPAU (depending on FFmpeg version),
	- simple visualization shows RMS of displayed signal in side bars,
	- fixes in AudioCD module, so any tracks must be added again,
	- falling horizontal lines behave better in visualizations,
	- play next entry after playback error (as default),
	- removed console for Windows,
	- added chiptune playback,
	- fix decoding Bink Video,
	- bugfix,

Changes in QMPlay2 build 15.10.18:
	- new OpenGL 2 module (with OpenGL|ES 2.0 support) replaces the old OpenGL module,
	- due to new libass 0.13.0, FontConfig is used only on 32-bit Windows XP,
	- correct display information about buffered time and size,
	- DirectDraw improvements,
	- many minor fixes,

Changes in QMPlay2 build 15.10.03:
	- user can hide menu bar by pressing Alt+Ctrl+M or from "Widgets" context menu,
	- minimum and maximum frequency in equalizer can be changed,
	- basic WebVTT subtitles support (SRT module),
	- added preamp and dB tooltip to equalizer,
	- fixed possible deadlock in AudioCD,
	- small bugfix,

Changes in QMPlay2 build 15.08.12:
	- deinterlacing fixes in VAApi,
	- minor fixes for Windows,
	- MPRIS2 bugfix,

Changes in QMPlay2 build 15.07.13:
	- fixed problem from previous release with playing video (sometimes video plays at maximum speed),

Changes in QMPlay2 build 15.07.12:
	- keyboard shortcut (Shift+L) for locking widgets,
	- fixed seeking by searching key frames in buffer,
	- aspect ratio is now correctly updated,
	- fixed playback in live streams,
	- small fixes in video playback,
	- VAApi bugfix,

Changes in QMPlay2 build 15.06.26: